--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                 <option value="394582007">Dermatología</option>
                 <option value="394583002">Pediatría</option>
                 <option value="394802001">Medicina General</option>
+                <option value="394586005">Gastroenterología</option>
+                <option value="394591006">Endocrinología</option>
+                <option value="394609007">Neurología</option>
+                <option value="394602005">Oncología</option>
+                <option value="394595002">Reumatología</option>
+                <option value="394914008">Urología</option>
             </select>
 
             <label for="day">Día de la Cita:</label>
